include/wtf.h

typedef struct wtf_stream wtf_stream_t;
//! Result codes for all WebTransport operations
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
//! Stream operational states
typedef enum {
    WTF_STREAM_OPEN,     //! Stream is active
    WTF_STREAM_CLOSING,  //! Stream is closing gracefully
    WTF_STREAM_CLOSED    //! Stream is fully closed
} wtf_stream_state_t;
//! Stream direction types
typedef enum {
    WTF_STREAM_BIDIRECTIONAL = 0,  //! Data can flow in both directions
    WTF_STREAM_UNIDIRECTIONAL = 1  //! Data flows in one direction only
} wtf_stream_type_t;
//! Stream event data structure
typedef struct {
    wtf_stream_event_type_t type;  //! Type of stream event
    wtf_stream_t* stream;          //! Stream that generated the event
    void* user_context;            //! User-provided context data

    union {
        struct {
            wtf_buffer_t* buffers;  //! Array of received data buffers
            uint32_t buffer_count;  //! Number of buffers
            bool fin;               //! True if this is the final data
        } data_received;

        struct {
            wtf_buffer_t* buffers;  //! Array of sent data buffers
            uint32_t buffer_count;  //! Number of buffers sent
            bool cancelled;         //! True if send was cancelled
        } send_complete;

        struct {
            uint32_t error_code;  //! Error code for abort
        } aborted;
    };
} wtf_stream_event_t;
//! Stream event notification callback
//! @param event stream event details
typedef void (*wtf_stream_callback_t)(const wtf_stream_event_t* event);
//! Get the stream ID
//! @param stream target stream
//! @param stream_id pointer to receive the stream ID
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_stream_get_id(wtf_stream_t* stream, uint64_t* stream_id);
//! Set the stream callback
//! @param stream target stream
//! @param callback event callback function
WTF_API void wtf_stream_set_callback(wtf_stream_t* stream, wtf_stream_callback_t callback);
//! Set stream user context
//! @param stream target stream
//! @param user_context user-provided context data
WTF_API void wtf_stream_set_context(wtf_stream_t* stream, void* user_context);
//! Get stream user context
//! @param stream target stream
//! @return user-provided context data
WTF_API void* wtf_stream_get_context(wtf_stream_t* stream);
 

//! Get stream type
//! @param stream target stream
//! @return stream type (bidirectional or unidirectional)
WTF_API wtf_stream_type_t wtf_stream_get_type(wtf_stream_t* stream);
//! Get stream state
//! @param stream target stream
//! @return current stream state
WTF_API wtf_stream_state_t wtf_stream_get_state(wtf_stream_t* stream);
//! Set stream priority - higher values indicate higher priority
//! @param stream target stream
//! @param priority priority value (higher = more priority)
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_stream_set_priority(wtf_stream_t* stream, uint16_t priority);