java/src/com/structmap/webtransportfast/wtf_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_get_id(wtf_stream_t *stream, uint64_t *stream_id)
     * }
     */
    public static MethodHandle wtf_stream_get_id$handle() {
        return wtf_stream_get_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_get_id(wtf_stream_t *stream, uint64_t *stream_id)
     * }
     */
    public static MemorySegment wtf_stream_get_id$address() {
        return wtf_stream_get_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_get_id(wtf_stream_t *stream, uint64_t *stream_id)
     * }
     */
    public static int wtf_stream_get_id(MemorySegment stream, MemorySegment stream_id) {
        var mh$ = wtf_stream_get_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_get_id", stream, stream_id);
            }
            return (int)mh$.invokeExact(stream, stream_id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_set_callback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_set_callback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wtf_stream_set_callback(wtf_stream_t *stream, wtf_stream_callback_t callback)
     * }
     */
    public static FunctionDescriptor wtf_stream_set_callback$descriptor() {
        return wtf_stream_set_callback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wtf_stream_set_callback(wtf_stream_t *stream, wtf_stream_callback_t callback)
     * }
     */
    public static MethodHandle wtf_stream_set_callback$handle() {
        return wtf_stream_set_callback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wtf_stream_set_callback(wtf_stream_t *stream, wtf_stream_callback_t callback)
     * }
     */
    public static MemorySegment wtf_stream_set_callback$address() {
        return wtf_stream_set_callback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wtf_stream_set_callback(wtf_stream_t *stream, wtf_stream_callback_t callback)
     * }
     */
    public static void wtf_stream_set_callback(MemorySegment stream, MemorySegment callback) {
        var mh$ = wtf_stream_set_callback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_set_callback", stream, callback);
            }
            mh$.invokeExact(stream, callback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_set_context {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_set_context");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wtf_stream_set_context(wtf_stream_t *stream, void *user_context)
     * }
     */
    public static FunctionDescriptor wtf_stream_set_context$descriptor() {
        return wtf_stream_set_context.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wtf_stream_set_context(wtf_stream_t *stream, void *user_context)
     * }
     */
    public static MethodHandle wtf_stream_set_context$handle() {
        return wtf_stream_set_context.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wtf_stream_set_context(wtf_stream_t *stream, void *user_context)
     * }
     */
    public static MemorySegment wtf_stream_set_context$address() {
        return wtf_stream_set_context.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wtf_stream_set_context(wtf_stream_t *stream, void *user_context)
     * }
     */
    public static void wtf_stream_set_context(MemorySegment stream, MemorySegment user_context) {
        var mh$ = wtf_stream_set_context.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_set_context", stream, user_context);
            }
            mh$.invokeExact(stream, user_context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_get_context {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_get_context");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *wtf_stream_get_context(wtf_stream_t *stream)
     * }
     */
    public static FunctionDescriptor wtf_stream_get_context$descriptor() {
        return wtf_stream_get_context.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *wtf_stream_get_context(wtf_stream_t *stream)
     * }
     */
    public static MethodHandle wtf_stream_get_context$handle() {
        return wtf_stream_get_context.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *wtf_stream_get_context(wtf_stream_t *stream)
     * }
     */
    public static MemorySegment wtf_stream_get_context$address() {
        return wtf_stream_get_context.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *wtf_stream_get_context(wtf_stream_t *stream)
     * }
     */
    public static MemorySegment wtf_stream_get_context(MemorySegment stream) {
        var mh$ = wtf_stream_get_context.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_get_context", stream);
            }
            return (MemorySegment)mh$.invokeExact(stream);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_get_type {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_get_type");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_stream_type_t wtf_stream_get_type(wtf_stream_t *stream)
     * }
     */
    public static FunctionDescriptor wtf_stream_get_type$descriptor() {
        return wtf_stream_get_type.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_stream_type_t wtf_stream_get_type(wtf_stream_t *stream)
     * }
     */
    public static MethodHandle wtf_stream_get_type$handle() {
        return wtf_stream_get_type.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_stream_type_t wtf_stream_get_type(wtf_stream_t *stream)
     * }
     */
    public static MemorySegment wtf_stream_get_type$address() {
        return wtf_stream_get_type.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_stream_type_t wtf_stream_get_type(wtf_stream_t *stream)
     * }
     */
    public static int wtf_stream_get_type(MemorySegment stream) {
        var mh$ = wtf_stream_get_type.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_get_type", stream);
            }
            return (int)mh$.invokeExact(stream);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_get_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_get_state");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_stream_state_t wtf_stream_get_state(wtf_stream_t *stream)
     * }
     */
    public static FunctionDescriptor wtf_stream_get_state$descriptor() {
        return wtf_stream_get_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_stream_state_t wtf_stream_get_state(wtf_stream_t *stream)
     * }
     */
    public static MethodHandle wtf_stream_get_state$handle() {
        return wtf_stream_get_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_stream_state_t wtf_stream_get_state(wtf_stream_t *stream)
     * }
     */
    public static MemorySegment wtf_stream_get_state$address() {
        return wtf_stream_get_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_stream_state_t wtf_stream_get_state(wtf_stream_t *stream)
     * }
     */
    public static int wtf_stream_get_state(MemorySegment stream) {
        var mh$ = wtf_stream_get_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_get_state", stream);
            }
            return (int)mh$.invokeExact(stream);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_set_priority {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_SHORT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_set_priority");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_priority(wtf_stream_t *stream, uint16_t priority)
     * }
     */
    public static FunctionDescriptor wtf_stream_set_priority$descriptor() {
        return wtf_stream_set_priority.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_priority(wtf_stream_t *stream, uint16_t priority)
     * }
     */
    public static MethodHandle wtf_stream_set_priority$handle() {
        return wtf_stream_set_priority.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_priority(wtf_stream_t *stream, uint16_t priority)
     * }
     */
    public static MemorySegment wtf_stream_set_priority$address() {
        return wtf_stream_set_priority.ADDR;
    }
